--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -31,3 +31,6 @@ filter=-build/include
 # Do not check access modifier indentation.
 # CPPLint enforces +1, but our rule is no indentation.
 filter=-whitespace/indent
+
+# pragma once is used pervasively in Android
+filter=-build/header_guard
