VHAL server sends the garage mode controlling signals to the client
The server listens on the power state marker file (which will be created
by another process), and send power state request values to the client

Bug: 141626390
Test: change to value of "/tmp/power_state_marker" to "shutdown" or
"on", will see entering and exiting garage mode on AAOS

Change-Id: Ie4cb7217d220291261e8a72a3425a5a1e5a846db

--- a/hal/vehicle/2.0/agl_build/CMakeLists.txt
+++ b/hal/vehicle/2.0/agl_build/CMakeLists.txt
@@ -92,6 +92,7 @@ target_compile_options(vehicle_hal_protobuf_gen PRIVATE ${_trout_CXX_FLAGS} -Wno
 
 add_executable(vehicle_hal_grpc_server
     ${trout_VHAL_SRC_ROOT}/VirtualizationGrpcServer.cpp
+    ${trout_VHAL_SRC_ROOT}/GarageModeServerSideHandler.cpp
     ${trout_VHAL_SRC_ROOT}/GrpcVehicleServer.cpp
     ${trout_VHAL_SRC_ROOT}/Utils.cpp
 
