Revert "Move virtualization-specific proto definition to /device/google/trout"
This reverts commit 1e60f7e1070f76a8304bb064db063c3d59ee669f.
Bug: 153479300
Reason for revert: Build breakage

Change-Id: I716e02df14ee618ff4d52e69d2b0c77044c84be1

--- a/hal/vehicle/2.0/agl_build/CMakeLists.txt
+++ b/hal/vehicle/2.0/agl_build/CMakeLists.txt
@@ -41,9 +41,7 @@ function(trout_generate_grpc_cpp_from_proto)
     return()
   endif()
 
-  set(_protobuf_include_path -I . -I ${_trout_PROTOBUF_WELLKNOWN_INCLUDE_DIR}
-      -I ${trout_VHAL_SRC_ROOT}/agl_build/third_party/default_native_vhal/impl/vhal_v2_0/proto)
-
+  set(_protobuf_include_path -I . -I ${_trout_PROTOBUF_WELLKNOWN_INCLUDE_DIR})
   foreach(FIL ${ARGN})
     get_filename_component(ABS_FIL ${FIL} ABSOLUTE)
     get_filename_component(ABS_DIR ${ABS_FIL} DIRECTORY)
@@ -73,7 +71,7 @@ endfunction()
 
 trout_generate_grpc_cpp_from_proto(
     ${trout_VHAL_SRC_ROOT}/agl_build/third_party/default_native_vhal/impl/vhal_v2_0/proto/VehicleHalProto.proto
-    ${trout_VHAL_SRC_ROOT}/proto/VehicleServer.proto)
+    ${trout_VHAL_SRC_ROOT}/agl_build/third_party/default_native_vhal/impl/vhal_v2_0/proto/VehicleServer.proto)
 
 # ========== Protobuf generated code ==================
 
