AGL-side Power State Listener
Listening to the unix socket, receive the power state message from the
hypervisor and update the power state marker file accordingly.

Test: run on AGL, then

`socat - UNIX-CONNECT:/tmp/power_state_socket`

to send message to the vhal server

Bug: 141626390
Change-Id: I40adee72266fc64daafc2caf22927471740630df

--- a/hal/vehicle/2.0/agl_build/CMakeLists.txt
+++ b/hal/vehicle/2.0/agl_build/CMakeLists.txt
@@ -96,6 +96,7 @@ add_executable(vehicle_hal_grpc_server
     ${trout_VHAL_SRC_ROOT}/VirtualizationGrpcServer.cpp
     ${trout_VHAL_SRC_ROOT}/GarageModeServerSideHandler.cpp
     ${trout_VHAL_SRC_ROOT}/GrpcVehicleServer.cpp
+    ${trout_VHAL_SRC_ROOT}/PowerStateListener.cpp
     ${trout_VHAL_SRC_ROOT}/Utils.cpp
 
     ${trout_NATIVE_VHAL_ROOT_DIR}/common/src/Obd2SensorStore.cpp
