Build scripts for AGL services
Bug: 155491613
Test: use repo_manifest.xml to initialize the repo; lunch and set COQOS_HV_PATH; build by ./build.sh
Change-Id: Iaf51d1cbaffb71b76a43b822f13171517b7436cd

--- a/hal/vehicle/2.0/agl_build/CMakeLists.txt
+++ b/hal/vehicle/2.0/agl_build/CMakeLists.txt
@@ -32,8 +32,21 @@ endif()
 
 # ========== grpc proto prebuilts =================
 
-find_program(trout_PROTOC aprotoc REQUIRED)
-find_program(trout_GRPC_CPP_PLUGIN protoc-gen-grpc-cpp-plugin REQUIRED)
+if (NOT trout_HOST_PROGRAM_PATH)
+    set(trout_HOST_PROGRAM_PATH ${trout_SRC_ROOT}/host_build/bin)
+endif()
+
+# find Android prebuilt programs first
+find_program(trout_PROTOC aprotoc)
+find_program(trout_GRPC_CPP_PLUGIN protoc-gen-grpc-cpp-plugin)
+
+# If not found in Android prebuilts, then find in the host program path
+find_program(trout_PROTOC protoc
+             PATHS ${trout_HOST_PROGRAM_PATH}
+             NO_DEFAULT_PATH)
+find_program(trout_GRPC_CPP_PLUGIN grpc_cpp_plugin
+             PATHS ${trout_HOST_PROGRAM_PATH}
+             NO_DEFAULT_PATH)
 
 if(NOT _trout_PROTOBUF_WELLKNOWN_INCLUDE_DIR)
   message(FATAL_ERROR "_trout_PROTOBUF_WELLKNOWN_INCLUDE_DIR not set")
