Add the watchdog test service to the AGL build targets
Bug: 155491613
Bug: 154262220
Test: build.sh
Change-Id: Idd73f06627f38fe177b6c0be03a608f6aedf0ba2

--- a/agl_services_build/CMakeLists.txt
+++ b/agl_services_build/CMakeLists.txt
@@ -31,7 +31,7 @@ if (CMAKE_CROSSCOMPILING)
 
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dumpstate_server/agl_build)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vehicle_hal_server/agl_build)
-
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/watchdog_test_server)
 else()
     # ========== grpc host tools ===================
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/grpc-grpc)
