AGL side audio controller lib
Test: build; e2e test is TBD
Bug: 141473213

Change-Id: I7a1c6b8c67c635538881be332c9b9917e396b084

--- a/agl_services_build/CMakeLists.txt
+++ b/agl_services_build/CMakeLists.txt
@@ -33,6 +33,7 @@ if (CMAKE_CROSSCOMPILING)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vehicle_hal_server/agl_build)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/watchdog_test_server)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vehicle_hal_server/garage_mode_helper)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/audiocontrol/agl_build)
 
 else()
     # ========== grpc host tools ===================
