--- a/agl_services_build/CMakeLists.txt
+++ b/agl_services_build/CMakeLists.txt
@@ -32,6 +32,8 @@ if (CMAKE_CROSSCOMPILING)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/dumpstate_server/agl_build)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vehicle_hal_server/agl_build)
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/watchdog_test_server)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vehicle_hal_server/garage_mode_helper)
+
 else()
     # ========== grpc host tools ===================
     add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/third_party/grpc-grpc)
