Add an AGL tool to test audio control HAL
This program can be used on the AGL side to acquire audio focus
using Audio Control HAL APIs, and play a sound file (WAV format)
once focus is acquired.

It is a proof of concept meant for demo flows, rather than a production
hardened tool for safety critical usages.

Bug: 168727790
Test: build and flash on device then run
      android_audio_controller_test -f /tmp/chime.wav -s vsock:1000:9410
      while Android has focus via KitchenSink
      observe Android focus loss & car chime played
Change-Id: I6d4bae940bde16c53e7aef9ee8f0ebb3c7476505

--- a/hal/audiocontrol/2.0/agl_build/CMakeLists.txt
+++ b/hal/audiocontrol/2.0/agl_build/CMakeLists.txt
@@ -42,3 +42,16 @@ target_link_libraries(android_audio_controller
 )
 
 target_compile_options(android_audio_controller PRIVATE ${_trout_AUDIOFOCUS_CXX_FLAGS})
+
+# ========== libandroid_audio_controller_test ==============
+
+add_executable(android_audio_controller_test ${trout_AUDIOFOCUS_SRC_ROOT}/libandroid_audio_controller_test/main.cpp)
+
+target_compile_options(android_audio_controller_test PRIVATE ${_trout_AUDIOFOCUS_CXX_FLAGS})
+
+target_include_directories(android_audio_controller_test
+    PRIVATE ${trout_GENS_DIR}
+    PRIVATE ${trout_AUDIOFOCUS_SRC_ROOT}/libandroid_audio_controller
+)
+
+target_link_libraries(android_audio_controller_test android_audio_controller)
