--- a/hal/dumpstate/1.1/agl_build/CMakeLists.txt
+++ b/hal/dumpstate/1.1/agl_build/CMakeLists.txt
@@ -32,6 +32,7 @@ target_compile_options(dumpstate_protobuf_gen PRIVATE ${_dumpstate_CXX_FLAGS} -W
 add_executable(dumpstate_grpc_server
     ${dumpstate_SRC_ROOT}/DumpstateGrpcServer.cpp
     ${dumpstate_SRC_ROOT}/server_main.cpp
+    ${dumpstate_SRC_ROOT}/ServiceDescriptor.cpp
 )
 
 target_include_directories(dumpstate_grpc_server
