Indirect the list of services to invoke from the DumpstateServer
A ServiceSupplier object can be used to retrieve a list of services and
provide them to the dumpstate server instance. The server instance does not
contain a hardcoded list now, but retrieves the service data at construction
time from the supplier and stores it locally

The services provided are unchanged, but the source of the data is now
decoupled

Bug: 169089135
Test: generate bugreport; logs come through
Change-Id: I0a175cd36e26431624ec69d51665b8bc7a05d9e5

--- a/hal/dumpstate/1.1/agl_build/CMakeLists.txt
+++ b/hal/dumpstate/1.1/agl_build/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(dumpstate_grpc_server
     ${dumpstate_SRC_ROOT}/DumpstateGrpcServer.cpp
     ${dumpstate_SRC_ROOT}/server_main.cpp
     ${dumpstate_SRC_ROOT}/ServiceDescriptor.cpp
+    ${dumpstate_SRC_ROOT}/ServiceSupplier.cpp
 )
 
 target_include_directories(dumpstate_grpc_server
