Split away non-gRPC related bits of DumpstateGrpcServer into a base class
DumpstateServer (the new class introduced in this CL), handles the
service discovery and management aspect, and the gRPC subclass only
forwards calls and transforms the output into data types suitable
for being transferred via an active gRPC server connection

Bug: 169089135
Test: build
Change-Id: Iad0620f665d6ba97ba1087de40db920e1327ef45

--- a/hal/dumpstate/1.1/agl_build/CMakeLists.txt
+++ b/hal/dumpstate/1.1/agl_build/CMakeLists.txt
@@ -30,6 +30,7 @@ target_compile_options(dumpstate_protobuf_gen PRIVATE ${_dumpstate_CXX_FLAGS} -W
 # ========== dumpstate_grpc_server ==============
 
 add_executable(dumpstate_grpc_server
+    ${dumpstate_SRC_ROOT}/DumpstateServer.cpp
     ${dumpstate_SRC_ROOT}/DumpstateGrpcServer.cpp
     ${dumpstate_SRC_ROOT}/server_main.cpp
     ${dumpstate_SRC_ROOT}/ServiceDescriptor.cpp
