Enable dumpstate HAL to read service configuration from XML
This patch decouples dumpstate HAL's codebase from COQOS by providing
a XML-configurable list of services that can be changed without
recompiling the codebase

As we don't yet have the XML file stored on the host side, the
CL defaults to the existing service list, but provides a warning
at boot time. At this time, the filename also defaults to
/etc/aaos.dumpstate.xml, but this will be cleaned up in a
subsequent CL and made a command-line parameter

The XML API is built by means of Android xsd_config build
logic and copied with minimal tweaks out of the build root for
use in the source tree on the host side

Bug: 169089135
Test: build and push to device w/ and w/out config file
Change-Id: I909276b391433eebb7bb01c37c24cc27d1abeb5e

--- a/hal/dumpstate/1.1/agl_build/CMakeLists.txt
+++ b/hal/dumpstate/1.1/agl_build/CMakeLists.txt
@@ -5,6 +5,8 @@ include(${trout_SRC_ROOT}/cmake/grpc.cmake)
 include(${trout_SRC_ROOT}/cmake/protobuf.cmake)
 include(${trout_SRC_ROOT}/cmake/utils/grpc_cpp_generator.cmake)
 
+find_package(LibXml2 REQUIRED)
+
 get_filename_component(dumpstate_SRC_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/.. ABSOLUTE)
 
 if (NOT trout_GENS_DIR)
@@ -35,6 +37,8 @@ set(_dumpstate_sources
     ${dumpstate_SRC_ROOT}/DumpstateGrpcServer.cpp
     ${dumpstate_SRC_ROOT}/ServiceDescriptor.cpp
     ${dumpstate_SRC_ROOT}/ServiceSupplier.cpp
+    ${dumpstate_SRC_ROOT}/config/dumpstate_hal_configuration_V1_0.cpp
+    ${dumpstate_SRC_ROOT}/config/XmlServiceSupplier.cpp
 )
 
 add_executable(dumpstate_grpc_server
@@ -44,10 +48,13 @@ add_executable(dumpstate_grpc_server
 
 target_include_directories(dumpstate_grpc_server
     PRIVATE ${trout_GENS_DIR}
+    ${dumpstate_SRC_ROOT}
+    ${LIBXML2_INCLUDE_DIR}
 )
 
 target_link_libraries(dumpstate_grpc_server
     dumpstate_protobuf_gen
+    ${LIBXML2_LIBRARIES}
 )
 
 target_compile_options(dumpstate_grpc_server PRIVATE ${_dumpstate_CXX_FLAGS})
@@ -61,11 +68,13 @@ add_executable(dumpstate_tests
 target_include_directories(dumpstate_tests
     PRIVATE ${trout_GENS_DIR}
     ${dumpstate_SRC_ROOT}
+    ${LIBXML2_INCLUDE_DIR}
 )
 
 target_link_libraries(dumpstate_tests
     dumpstate_protobuf_gen
     ${trout_GOOGLETEST_LIBRARIES}
+    ${LIBXML2_LIBRARIES}
 )
 
 target_compile_options(dumpstate_tests PRIVATE ${_dumpstate_CXX_FLAGS})
