Update the meta-google layer for sc-v2
Test: build

Bug: 196133335

Change-Id: I5e87b5924635a65b9afb7aebf9c2b7922a5acc68

--- a/agl_services_build/CMakeLists.txt
+++ b/agl_services_build/CMakeLists.txt
@@ -22,6 +22,8 @@ set(ZLIB_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/zlib)
 
 if (CMAKE_CROSSCOMPILING)
     # ========== vehicle hal server build settings ===================
+    set(trout_ANDROID_LIBBASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/android/libbase)
+    set(trout_ANDROID_LIBLOG_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/android/logging/liblog)
     set(trout_ANDROID_SYSCORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/android/system_core)
     set(trout_FMTLIB_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/fmtlib)
     set(trout_GOOGLETEST_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/googletest)
