Fix the host Vehicle HAL agent build
In Android T, VHAL has been refactored and moved to an AIDL-based system
To keep the current trout implementation working, some files need to be
brought in from the previous AAOS version in order to keep the codebase
building successfully

This commit adds the old DefaultVehicleHalServer class from Android S

This code is taken from

  Project: platform/hardware/interfaces
  Branch: master

  commit 6029a37036b78d31e7143a722e11d0df2f0b84ec
  Author: Yu Shan <shanyu@google.com>
  Date:   Tue Jun 22 19:11:05 2021

Bug: 239634216
Test: build LV host image
Change-Id: Iaf01cb0d48d7cba914e6a209ccc3d4c5b2c82a9a

--- a/hal/vehicle/2.0/agl_build/CMakeLists.txt
+++ b/hal/vehicle/2.0/agl_build/CMakeLists.txt
@@ -45,6 +45,7 @@ target_compile_options(vehicle_hal_protobuf_gen PRIVATE ${_trout_VHAL_CXX_FLAGS}
 # ========== vehicle_hal_grpc_server ==============
 
 add_executable(vehicle_hal_grpc_server
+    ${trout_VHAL_SRC_ROOT}/DefaultVehicleHalServer.cpp
     ${trout_VHAL_SRC_ROOT}/VirtualizationGrpcServer.cpp
     ${trout_VHAL_SRC_ROOT}/GarageModeServerSideHandler.cpp
     ${trout_VHAL_SRC_ROOT}/GrpcVehicleServer.cpp
