--- a/hal/audiocontrol/aidl/1.0/audiocontrol-trout.rc
+++ b/hal/audiocontrol/aidl/1.0/audiocontrol-trout.rc
@@ -1,4 +1,4 @@
-service vendor.audiocontrol-default /vendor/bin/hw/android.hardware.automotive.audiocontrol-service.trout
+service vendor.audiocontrol-trout /vendor/bin/hw/android.hardware.automotive.audiocontrol-service.trout
     class hal
     user audioserver
     group system
