--- a/hal/dumpstate/aidl/1.0/dumpstate-trout.rc
+++ b/hal/dumpstate/aidl/1.0/dumpstate-trout.rc
@@ -1,4 +1,4 @@
-service vendor.audiocontrol-default /vendor/bin/hw/android.hardware.automotive.dumpstate-service.trout
+service vendor.dumpstate-trout /vendor/bin/hw/android.hardware.automotive.dumpstate-service.trout
     class hal
     user system
     group system shell
