Update the resource overlay
Correct android:targetPackage and android:targetName attributes.

Fix: 251523471
Test: m -j
Change-Id: Ie31c9ed8f6d0bde459c5a156b1db42f7672eb37c

--- a/rro_overlays/EvsOverlay/AndroidManifest.xml
+++ b/rro_overlays/EvsOverlay/AndroidManifest.xml
@@ -15,13 +15,11 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.car.trout"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="com.android.car.resources.trout">
     <application android:hasCode="false" />
-    <overlay
-      android:targetPackage="com.android.car"
-      android:targetName="EvsCustomization"
-      android:isStatic="true"
-      android:priority="0"/>
+    <overlay android:priority="5001"
+             android:targetPackage="com.android.car.updatable"
+             android:targetName="CarServiceCustomization"
+             android:resourcesMap="@xml/overlays"
+             android:isStatic="true" />
 </manifest>
